k8s/nginx/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newscrab-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - newscrab.duckdns.org
    secretName: newscrab-tls
  rules:
  - host: newscrab.duckdns.org
    http:
      paths:
      - path: /jenkins/
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port:
              number: 8080
      - path: /api/v1/reco/
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
